<resources>
    <string name="app_name">T-PARK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="新規登録はこちら">はじめてですか？新規登録はこちら</string>
    <string name="ログインはこちら">登録済みですか？ログインはこちら</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="name">Name</string>
    <string name="Sex">Gender</string>
    <string name="ログイン">ログイン</string>
    <string name="ログアウト">Log Out</string>

    <string name="登録する">登録する</string>
    <string name="予約する">予約する</string>
    <string name="予約">予約</string>
    <string name="一覧に戻る">一覧に戻る</string>
    <string name="使用開始時刻">使用開始時刻</string>
    <string name="使用終了時刻">使用終了時刻</string>


    <string-array name="性別">
        <item>男性</item>
        <item>女性</item>
        <item>その他</item>
    </string-array>

</resources>
