<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sche"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScheduleFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/to_book_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="bottom|right"
        android:layout_marginTop="0dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/style_obal"
        android:text="@string/予約"
        android:textColor="#ECEAEA"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_shadow"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:text="なまえ"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="0dp"
                android:paddingBottom="20dp"
                android:text="@string/使用開始時刻"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:text="@string/使用終了時刻"
                android:textSize="18sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/schedule_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</FrameLayout>